@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <item>
-    <version>2.3.5.1</version>
-    <url>https://github.com/TexTools/FFXIV_TexTools_UI/releases/download/v2.3.5.1b/FFXIV_TexTools_v2.3.5.1b.zip</url>
+    <version>2.3.5.2</version>
+    <url>https://github.com/TexTools/FFXIV_TexTools_UI/releases/download/v2.3.5.2b/FFXIV_TexTools_v2.3.5.2b.zip</url>
     <changelog>https://raw.githubusercontent.com/TexTools/FFXIV_TexTools_Updater/master/changelog_beta.txt</changelog>
     <mandatory mode="2">true</mandatory>
 </item>
