@@ -1,3 +1,7 @@
+2021-04-08
++ MINOR
+  - Updated offsets for Chinese version.
+
 2021-03-07
 + BUGFIXES
   - Resolved an issue wherein in the modlist menu would crash the application under certain conditions.
